--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,14 @@ h2{
   border: 3px solid #fff;
   border-radius: 5px;
   color: #fff;
+  padding: 5px 7px;
   margin: 5px;
-  padding: 5px;
   font-size: 40px;
   width: 60px;
   height: 60px;
+}
+span{
+  color: #fff;
 }
 .App{
   background-color: #000;
@@ -32,8 +35,20 @@ h2{
   height: 150px;
 }
 
-
 .display{
   display: flex;
   align-items: center;
+}
+.control{
+  margin-top: 10px;
+}
+
+.control button{
+  background-color: #000;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  color: #fff;
+  margin: 5px;
+  padding: 5px 10px;
+  width: 100px;
 }
